# test-drive

./: .gitignore  README.md  build.cake  dev-env-startup-sample.ps1
aws/sam/: README.md
docker/aerospike/: README.md  aql-docker.sh  run-as-server.sh
docker/cflinuxfs3/: README.md
docker/dotnet/: Dockerfile  build.ps1
docker/kafka/: docker-compose.yml
docker/postgres/: Dockerfile  README.md  bruno.csv  create-bruno-db.sh  create-table-001.sql  getdata.py  postgres-env-setup.ps1
docker/rabbitmq/: README.md  rabbitmq-docker.ps1
dotnet/: README.md
dotnet/Aerospike/: README.md  nuget-config-install.ps1
dotnet/CmdlineApp/: CmdlineApp.csproj  College.cs  CsvExporter.cs  EFQuery.cs  IPostgresQuery.cs  PostgresQuery.cs  Program.cs  SimpleQuery.cs  brunoContext.cs  csvhelper-exported.csv  speed-test.ps1
dotnet/CmdlineAppTest/: CmdlineAppTest.csproj  DbQueryTest.cs  README.md
dotnet/LdapAuthDemo/: LdapAuthDemo.csproj  LdapAuthDemo.sln  Program.cs  Startup.cs  appsettings.Development.json
dotnet/cake/: README.md  build-example.cake  build.cake  college-region-state.xml  hierarchicalXml.cake  query2csv.cake  text2speach.cake
jdk11/: README.md
pwsh/: text-to-speech.ps1
python/development/db2csv/: README.md  pyproject.toml
python/development/db2csv/db2csv/: __init__.py  dbconnect.py
python/development/db2csv/tests/: test_db2csv.py
rest-clients/: README.md  curl-test.ps1  fsharp.http.tests.fsx  goHttpTest.go  groovy.rest.tests.groovy  index.js  node-rest-client.js  paket.dependencies  pwsh.rest.tests.ps1  py.requests.tests.py  restsharp.tests.ps1
(+67 files in other folders)
